# obs-studio

UI/: volume-control.cpp
libobs/: obs-encoder.c  obs-video.c  obs-view.c
plugins/image-source/: CMakeLists.txt
plugins/mac-avcapture/: CMakeLists.txt
plugins/mac-virtualcam/src/dal-plugin/: CMakeLists.txt
plugins/obs-ffmpeg/: obs-ffmpeg-vaapi.c  obs-nvenc-helpers.c  obs-nvenc.c  texture-amf.cpp  vaapi-utils.c
plugins/obs-filters/: CMakeLists.txt
plugins/obs-filters/cmake/: rnnoise.cmake
plugins/obs-webrtc/: CMakeLists.txt
plugins/vlc-video/: CMakeLists.txt
plugins/win-capture/: game-capture.c
plugins/win-capture/data/locale/: en-US.ini
plugins/win-capture/graphics-hook/: d3d10-capture.cpp  d3d11-capture.cpp  d3d12-capture.cpp  d3d8-capture.cpp  d3d9-capture.cpp  dxgi-capture.cpp  gl-capture.c  graphics-hook.c  graphics-hook.h  vulkan-capture.c
plugins/win-dshow/virtualcam-module/: CMakeLists.txt
